syntax = "proto3";
package de.saschaufer.grpc_example_java.stubs.proto.bidirectional_streaming;

option java_multiple_files = true;
option java_outer_classname = "BidirectionalStreamingProto";

message Input {
  string string = 1;
}

message Output {
  string string = 1;
}

service BidirectionalStreamingService {
  rpc call(stream Input) returns (stream Output) {};
}
