syntax = "proto3";
package de.saschaufer.grpc_example_java.stubs.proto.client_streaming;

option java_multiple_files = true;
option java_outer_classname = "ClientStreamingProto";

message Input {
  string string = 1;
}

message Output {
  string string = 1;
}

service ClientStreamingService {
  rpc call(stream Input) returns (Output) {};
}
